[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
render_priority = 2
shader = SubResource( 1 )
shader_param/blur_amount = 3.0

[node name="PauseMenu" type="CanvasLayer" groups=["PauseMenu"]]
pause_mode = 2
script = ExtResource( 1 )

[node name="PauseMenuPopup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="PauseMenuPopup"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="PauseMenuContainer" type="VBoxContainer" parent="PauseMenuPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 15
alignment = 1

[node name="PauseMenuLabel" type="Label" parent="PauseMenuPopup/PauseMenuContainer"]
margin_right = 250.0
margin_bottom = 35.0
text = "Game Paused"
align = 1

[node name="ResumeButton" type="Button" parent="PauseMenuPopup/PauseMenuContainer"]
margin_top = 50.0
margin_right = 250.0
margin_bottom = 87.0
rect_min_size = Vector2( 250, 0 )
text = "Resume"

[node name="OptionsButton" type="Button" parent="PauseMenuPopup/PauseMenuContainer"]
margin_top = 102.0
margin_right = 250.0
margin_bottom = 139.0
rect_min_size = Vector2( 250, 0 )
disabled = true
text = "Options"

[node name="MainMenuButton" type="Button" parent="PauseMenuPopup/PauseMenuContainer"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 191.0
rect_min_size = Vector2( 250, 0 )
text = "Exit to main menu"

[node name="ExitGameButton" type="Button" parent="PauseMenuPopup/PauseMenuContainer"]
margin_top = 206.0
margin_right = 250.0
margin_bottom = 243.0
rect_min_size = Vector2( 250, 0 )
text = "Exit game"

[connection signal="popup_hide" from="PauseMenuPopup" to="." method="_on_PauseMenuPopup_popup_hide"]
[connection signal="pressed" from="PauseMenuPopup/PauseMenuContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenuPopup/PauseMenuContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="PauseMenuPopup/PauseMenuContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PauseMenuPopup/PauseMenuContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
